Issue #SB-12712 fix: Alignment Issues

--- a/src/app/client/src/assets/styles/components/header.scss
+++ b/src/app/client/src/assets/styles/components/header.scss
@@ -31,6 +31,8 @@
   @include respond-below(sm) {
     .container {
       margin: 0 !important;
+      padding-left: 16px !important;
+      padding-right: 16px !important;
     }
   }
 }
