--- a/src/app/client/src/assets/styles/semantic/semantic-overrides.scss
+++ b/src/app/client/src/assets/styles/semantic/semantic-overrides.scss
@@ -87,5 +87,7 @@ input[type=number]::-webkit-outer-spin-button {
 @include respond-below(sm) {
   .ui.container {
     margin: 0 8px !important;
+    padding-left: 16px !important;
+    padding-right: 16px !important;
   }
 }
